Archive2/c1/5f55b0797a3664/main.cpp
struct A
{
    template <typename T>
	struct B {};
};

template <typename T>
void foo()
{
	T::B<int> a; // Błąd!
}

int main()
{
    
}
